# imu-module-mik32

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
cmake/: toolchain_config.cmake
hardware/: CMakeLists.txt
src/: CMakeLists.txt  crt.S  main.c  startup.c  user.ld
src/app/: app_types.h  circular_buffer.c  circular_buffer.h  imu_frame.h  mode.h  mode_ball.c  mode_ball.h  mode_compass.c  mode_compass.h  mode_debug.c  mode_debug.h  mode_level.c  mode_level.h  mode_manager.c  mode_manager.h  mode_welcome.c  mode_welcome.h  queue.c  queue.h
src/drivers/: bno055_port.c  bno055_port.h  board_config.h  button.c  button.h  display_service.c  display_service.h  imu_service.c  imu_service.h  oled_ssd1306.c  oled_ssd1306.h  timer_service.c  timer_service.h  trap_handler.c
